update. setting up pydwcviz package

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@
 # http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
 
 [metadata]
-name = pyobis
+name = pydwcviz
 description = Python package for Darwin-Core Data Analysis.
 # author = 
 # author_email = 
