Feat. Setup docs

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@
 [metadata]
 name = pydwcviz
 description = Python package for Darwin-Core Data Analysis.
-# author = 
+author = 'Ayush Anand, Tylar Murray'
 # author_email = 
 url = https://github.com/marinebon/py-dwc-viz
 long_description_content_type = text/markdown
