--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -3,5 +3,26 @@ matplotlib
 plotly
 pyobis
 seaborn
-pytest
 flake8
+black
+check-manifest
+flake8-builtins
+flake8-comprehensions
+flake8-mutable
+flake8-print
+interrogate
+isort
+nbsphinx
+pre-commit
+pydocstyle
+pylint
+pytest
+pytest-cov
+pytest-flake8
+pytest-sugar
+pytest-xdist
+setuptools_scm
+sphinx
+sphinx_rtd_theme
+twine
+wheel
